// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text matches snapshot 1`] = `
.c0 {
  font-size: 1rem;
  color: undefined;
}

<div>
  <span
    class="c0"
    data-test-id="hsui-Text"
  />
</div>
`;

exports[`Text matches snapshot with icon strings 1`] = `
.c0 {
  font-size: 1rem;
  color: undefined;
}

.c1 {
  margin-right: .5em;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: text-bottom;
}

.c2 {
  margin-left: .5em;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: text-bottom;
}

<div>
  <span
    class="c0"
    data-test-id="hsui-Text"
  >
    <span
      class="c1"
    >
      <svg
        role="presentation"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
      >
        <path
          d="mdiComment"
          style="fill: currentColor;"
        />
      </svg>
    </span>
    <span
      class="c2"
    >
      <svg
        role="presentation"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
      >
        <path
          d="mdiComment"
          style="fill: currentColor;"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Text matches snapshot with icons 1`] = `
.c0 {
  font-size: 1rem;
  color: undefined;
}

.c1 {
  margin-right: .5em;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: text-bottom;
}

.c2 {
  margin-left: .5em;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: text-bottom;
}

<div>
  <span
    class="c0"
    data-test-id="hsui-Text"
  >
    <span
      class="c1"
    >
      <svg
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="mdiComment"
          style="fill: currentColor;"
        />
      </svg>
    </span>
    <span
      class="c2"
    >
      <svg
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="mdiComment"
          style="fill: currentColor;"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Text matches snapshot with isLoading 1`] = `
.c0 {
  font-size: 1rem;
  color: undefined;
}

.c1 {
  background: linear-gradient( 45deg, rgba(255,255,255,0.75), rgba(0,0,0,0.75), rgba(255,255,255,0.75), rgba(0,0,0,0.75), rgba(255,255,255,0.75) ) repeat;
  background-size: 400% 100%;
  width: 6rem;
  height: 16px;
  border-radius: 9999px;
  -webkit-animation: ia-dwnO 8s linear infinite;
  animation: ia-dwnO 8s linear infinite;
  line-height: 0;
  width: calc(1rem * 10);
  height: 1rem;
}

<div>
  <span
    class="c0"
    data-test-id="hsui-Text"
  >
    <div
      class="c1"
    />
  </span>
</div>
`;

exports[`Text matches snapshot with isProcessing 1`] = `
.c0 {
  font-size: 1rem;
  color: undefined;
}

.c1 {
  margin-right: .5em;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: text-bottom;
}

<div>
  <span
    class="c0"
    data-test-id="hsui-Text"
  >
    <span
      class="c1"
    >
      <svg
        role="presentation"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
      >
        <style>
          @keyframes spin { to { transform: rotate(360deg) } }
        </style>
        <g
          style="animation: spin linear 1s infinite; transform-origin: center;"
        >
          <path
            d="M12,4V2A10,10 0 0,0 2,12H4A8,8 0 0,1 12,4Z"
            style="fill: currentColor;"
          />
          <rect
            fill="transparent"
            height="24"
            width="24"
          />
        </g>
      </svg>
    </span>
  </span>
</div>
`;
